update media objects
